name:                physics
version:             0.1.0.0
synopsis:            dimensions, quantities and constants
description:         Library to work with typed SI dimensions and common physical functions and constants.
license:             BSD3
license-file:        LICENSE
author:              Florian Knupfer
maintainer:          fknupfer@gmail.com
copyright:           2018, Florian Knupfer
category:            Science
build-type:          Simple
cabal-version:       >=1.10
source-repository     head
   Type: git
   Location: https://github.com/knupfer/physics

library
  exposed-modules:   Physics.Units
                   , Physics.Units.Base
                   , Physics.Units.Derived
                   , Physics.Units.Arithmetic
  other-modules:     Physics.Units.Type
  build-depends:     base <= 4.12
  ghc-options:       -Wall
  hs-source-dirs:    src
  default-language:  Haskell2010
