name:                physics
version:             0.1.0.0
synopsis:            dimensions, quantities and constants
description:         Library to work with typed SI dimensions and common physical functions and constants.
license:             BSD3
license-file:        LICENSE
author:              Florian Knupfer
maintainer:          fknupfer@gmail.com
copyright:           2018, Florian Knupfer
category:            Science
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3
                   , GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.3
                   , GHC == 8.6.1
source-repository    head
   Type: git
   Location: https://github.com/knupfer/physics

library
  exposed-modules:   Physics.Units
                   , Physics.Units.Base
                   , Physics.Units.Derived
                   , Physics.Units.Arithmetic
                   , Physics.Units.Prefixes
                   , Physics.Constants
  other-modules:     Physics.Units.Type
  build-depends:     base <= 5
  ghc-options:       -Wall
  hs-source-dirs:    src
  default-language:  Haskell2010
